parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@from_import.py-2.snap
---
source: parser/src/parser/parser.rs
description: "import a\nimport a as b\nimport a.b\nimport a.b as c\nimport a.b.c\nfrom a import b\nfrom a import b as c\nfrom a.b import c\nfrom a.b import c as d\nfrom ...a import b\nfrom ....a import b\nfrom .....a import b\nfrom ......a import b\nfrom .......a import b\nfrom ...\n"
input_file: parser/test_data/inputs/one_liners/from_import.py
---
[
    InvalidSyntax {
        path: "",
        msg: "Expected one of \"Identifier, Mul, \" but found Eof",
        line: 16,
        input: "",
        advice: "Use * for importing everthing or use () to specify names to import or specify the name you want to import",
        span: (
            246,
            255,
        ),
    },
]
