parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@function_def.py-17.snap
---
source: parser/src/parser/parser.rs
description: "def a[T, *U](): pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
Module {
    node: Node {
        start: 0,
        end: 20,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 20,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 13,
                        end: 13,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 16,
                                end: 20,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [
                    TypeVar(
                        TypeVar {
                            node: Node {
                                start: 6,
                                end: 7,
                            },
                            name: "T",
                            bound: None,
                        },
                    ),
                    TypeVarTuple(
                        TypeVarTuple {
                            node: Node {
                                start: 9,
                                end: 11,
                            },
                            name: "U",
                        },
                    ),
                ],
            },
        ),
    ],
}
