parser/src/parser/snapshots/enderpy_python_parser__parser__parser__tests__one_liners@function_def.py-20.snap
---
source: parser/src/parser/parser.rs
description: "def a[**T](): pass"
input_file: parser/test_data/inputs/one_liners/function_def.py
---
Module {
    node: Node {
        start: 0,
        end: 18,
    },
    body: [
        FunctionDef(
            FunctionDef {
                node: Node {
                    start: 0,
                    end: 18,
                },
                name: "a",
                args: Arguments {
                    node: Node {
                        start: 11,
                        end: 11,
                    },
                    posonlyargs: [],
                    args: [],
                    vararg: None,
                    kwonlyargs: [],
                    kw_defaults: [],
                    kwarg: None,
                    defaults: [],
                },
                body: [
                    Pass(
                        Pass {
                            node: Node {
                                start: 14,
                                end: 18,
                            },
                        },
                    ),
                ],
                decorator_list: [],
                returns: None,
                type_comment: None,
                type_params: [
                    ParamSpec(
                        ParamSpec {
                            node: Node {
                                start: 6,
                                end: 9,
                            },
                            name: "T",
                        },
                    ),
                ],
            },
        ),
    ],
}
